force-app/main/default/objects/Lead/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ do cliente</description>
    <label>CNPJ</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>