force-app/main/default/objects/Lead/fields/ConsultaCredito__c.field-meta.xml
<CustomField>
    <fullName>ConsultaCredito__c</fullName>
    <description>Consulta de Análise de crédito</description>
    <label>Consulta Credito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>